	socket timeout (in decimal seconds) used for HTTP/AJP and
	FastCGI.

	* The FastCGI server now reads each request in a separate
	thread. Upgraded jfast.jar to 1.0lcs3.

	* The current set of workloads can now be inspected using JMX.

	* Timer handles can now run in 'fixed-delay' or 'fixed-rate'
	mode, specified by the 'mode' attribute. Default is 'fixed-rate'.

0.9.20090521
	* Added the XKCD example from the Wiki.

	* Fixed apps in examples to use req.scriptURI instead of the
	web-server dependent CGI variable SCRIPT_NAME.

	* Added DOCUMENT_ROOT CGI variable in HTTP mode.

	* Added Java EE Servlet support: ESXX can now run inside
	a J2EE application server, such as Glassfish or Tomcat.

	* XSLT parameters may now be specified via the property
	'params' in the ESXX.Response object.

	* A build.xml file is now included in esxx.war, so it can
	easily be rebuilt with custom content.

	* Added 'esxx.host', which refers to a host object that can be
	set when ESXX is embedded. For instance, If ESXX is deployed as a
	Servlet, 'esxx.host' will refer to that Servlet.

	* Added HTTP filter support. And there was much rejoicing.

	* Property requestMethod is now available on the ESXX.Request
	object.

	* Upgraded to Rhino 1.7 release 2 + patch for bug #477233.

	* Added command line option --db-console to start H2's
	database console.

	* Added the "Hello world" and "The Ajax Blog" tutorials to the
	examples.

	* All-new look of error messages and file listings. No more
	references to esxx.org resources, everything is now embedded.

	* Updated to Saxon 9.0.0.8.

	* Added an uninstall script for OSX.

	* Removed utility file esxx/Object.js. Use Function.bind()
	from esxx/harmony.js instead of Object.$(). Hey, it's still
	alpha!

	* Well, actually it's not. Hello, beta!

0.9.20090201
	* Fixed bug #14765: req.scriptURI has problems with encoded
	URI:s.

	* Fixed problems with the init script that made chkconfig not
	recognize it.
