@@ -155,6 +155,9 @@
 	* Timer handles can now run in 'fixed-delay' or 'fixed-rate'
 	mode, specified by the 'mode' attribute. Default is 'fixed-rate'.
 
+	* Added 'params' member to ESXX.JSRequest. Store whatever you
+	wish here.
+
 0.9.20090521
 	* Added the XKCD example from the Wiki.
 
